Add New Code and Data

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+.Rproj.user
+
+# Folder
+data/raw_data/
+data/rds_data/
+data/shapefile/
